--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10.875rem auto 0 auto;
+  margin: 10.875rem auto 10.9375rem auto;
   padding: 2.5rem;
 }
 
